--- a/docs/notebooks/cve/cve.ipynb
+++ b/docs/notebooks/cve/cve.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "**Common Vulnerabilities and Exposures Identifier (CVE ID)** is a unique, alphanumeric identifier assigned by the CVE Program. Each identifier references a specific vulnerability. A CVE ID enables automation and multiple parties to discuss, share, and correlate information about a specific vulnerability, knowing they are referring to the same thing\n",
     "\n",
-    "> source: [https://www.cve.org/ResourcesSupport/Glossary?activeTerm=glossaryCVEID](https://www.cve.org/ResourcesSupport/Glossary?activeTerm=glossaryCVEID)\n",
+    "> source: [https://www.cve.org](https://www.cve.org/ResourcesSupport/Glossary?activeTerm=glossaryCVEID)\n",
     "\n"
    ]
   },
@@ -414,6 +414,14 @@
    "metadata": {},
    "source": [
     "## CVE data saving"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b3522c7-1d6e-46c0-8400-ea82dbbb645f",
+   "metadata": {},
+   "source": [
+    "CSV file is available in GitHub repository [here](https://github.com/LimberDuck/limberduck.org/blob/master/docs/notebooks/cve/cve-number-of-entries.csv)."
    ]
   },
   {
